--- a/index.html
+++ b/index.html
@@ -890,7 +890,7 @@
                     <div style="display: flex; gap: 12px; align-items: center;">
                         <input type="text" id="searchStudent" class="form-input" placeholder="🔍 Buscar atleta..." 
                                style="max-width: 300px; margin: 0;" onkeyup="filterStudents()" />
-                        <button class="btn btn-secondary" onclick="openModal('importComplete'); return false;">
+                        <button class="btn btn-secondary" type="button" onclick="openModal('importComplete')">
     📥 Importar Completo (CSV)
 </button>
                         <button class="btn btn-primary" onclick="openModal('addStudent')">
