--- a/index.html
+++ b/index.html
@@ -1099,9 +1099,9 @@
             </div>
         </div>
 
-        <!-- Add Training Day Modal -->
+      <!-- Add Training Day Modal -->
         <div id="modal-addTrainingDay" class="modal">
-            <!-- ... siguiente modal ... -->
+            <div class="modal-content">
         <!-- Add Training Day Modal -->
         <div id="modal-addTrainingDay" class="modal">
             <div class="modal-content">
