--- a/index.html
+++ b/index.html
@@ -3607,28 +3607,28 @@ function deleteGoal(goalId) {
                                 <th>Acciones</th>
                             </tr>
                         </thead>
-                        <tbody>
-                            ${monthSessions.reverse().map((s, idx) => {
-                                const dateObj = new Date(s.date + 'T12:00:00');
-                                const formattedDate = dateObj.toLocaleDateString('es-AR', { 
-                                    day: '2-digit', 
-                                    month: '2-digit'
-                                });
-                                
-                                return `
-                                    <tr>
-                                        <td>${formattedDate}</td>
-                                        <td><strong>${s.dayName || 'Plan'}</strong></td>
-                                        <td>${s.volume.toLocaleString()} kg</td>
-                                        <td>${s.avgRPE}</td>
-                                        <td>${s.prs > 0 ? '🏆 ' + s.prs : '-'}</td>
-                                        <td>
-    <button class="btn btn-secondary btn-sm" onclick="editSession(${idx})" style="padding: 4px 8px;">✏️ Editar</button>
-</td>
-                                    </tr>
-                                `;
-                            }).join('')}
-                        </tbody>
+                       <tbody>
+    ${monthSessions.reverse().map((s, idx) => {
+        const dateObj = new Date(s.date + 'T12:00:00');
+        const formattedDate = dateObj.toLocaleDateString('es-AR', { 
+            day: '2-digit', 
+            month: '2-digit'
+        });
+        
+        return `
+            <tr>
+                <td>${formattedDate}</td>
+                <td><strong>${s.dayName || 'Plan'}</strong></td>
+                <td>${(s.volume || 0).toLocaleString()} kg</td>
+                <td>${(s.avgRPE || 0)}</td>
+                <td>${(s.prs || 0) > 0 ? '🏆 ' + s.prs : '-'}</td>
+                <td>
+                    <button class="btn btn-secondary btn-sm" onclick="editSession(${idx})" style="padding: 4px 8px;">✏️ Editar</button>
+                </td>
+            </tr>
+        `;
+    }).join('')}
+</tbody>
                     </table>
                 </div>
             `;
