--- a/index.html
+++ b/index.html
@@ -961,7 +961,7 @@
                     <span id="statusDot">⚪</span>
                     <span id="statusText">Conectando...</span>
                 </div>
-                <button class="sync-btn" id="syncBtn" onclick="manualSync()">
+                <button class="sync-btn" id="syncBtn" onclick="forceSyncAll()">
                     🔄 Sincronizar
                 </button>
                 <nav class="nav-tabs" id="mainNav">
